--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,7 @@
             </div>
             <form
               class="info__form form"
-              method="POST"
+              action=""
               name="form"
               >
               <input
@@ -337,7 +337,14 @@
                 placeholder="Email"
                 class="input form__input"
               >
-              <button class="form__btn btn">Consultation</button>
+              <button
+                class="form__btn btn"
+                type="submit"
+                name="Submit"
+                value="Consultation"
+              >
+                Consultation
+              </button>
             </form>
           </div>
         </div>
@@ -408,7 +415,10 @@
               <h4 class="block__title">Address</h4>
               <a href="#" class="block__text">400 first ave. n.<br>suite 700<br>Minneapolis, MN 55401</a>
             </div>
-            <form class="form block__form" method="POST">
+            <form
+              class="form block__form"
+              action=""
+            >
               <input
                 type="text"
                 name="name" required
@@ -421,7 +431,14 @@
                     class="input form__input"
               >
               <textarea placeholder="Message" class="input-textarea form__input--textarea"></textarea>
-              <button class="form__btn btn">Consultation</button>
+              <button
+                class="form__btn btn"
+                type="submit"
+                name="Submit"
+                value="Consultation"
+              >
+                Consultation
+              </button>
             </form>
           </div>
         </div>
