--- a/src/index.html
+++ b/src/index.html
@@ -425,10 +425,11 @@
                 placeholder="Name"
                 class="input form__input"
               >
-              <input type="email"
-                    name="email" required
-                    placeholder="Email"
-                    class="input form__input"
+              <input
+                type="email"
+                name="email" required
+                placeholder="Email"
+                class="input form__input"
               >
               <textarea placeholder="Message" class="input-textarea form__input--textarea"></textarea>
               <button
